# ChatApp

./: .gitignore  CMakeLists.txt  PZ.docx  README.md
.github/workflows/: ChatApp_ci.yml
ChatApp/: CMakeLists.txt
ChatApp/.github/workflows/: ChatApp_ci.yml
ChatApp/client/: auth_window.h  auth_window.ui  chat_controller.cpp  chat_controller.h  client.pro  groupchat_controller.cpp  groupchat_controller.h  groupchat_model.cpp  groupchat_model.h  groupchatwindow.cpp  groupchatwindow.h  groupchatwindow_activate.h  logcl1.txt  logcl2.txt  logsrv.txt  main.cpp  mainwindow.cpp  mainwindow.cpp.old  mainwindow.h  mainwindow.ui  mainwindow_controller.cpp  mainwindow_controller.h  privatechat_controller.cpp  privatechat_controller.h  privatechat_model.cpp  privatechat_model.h  privatechatwindow.cpp  privatechatwindow.h  reg_window.cpp  reg_window.h  transitwindow.cpp  transitwindow.h  transitwindow.ui
ChatApp/client/client.app/Contents/: Info.plist
ChatApp/client/client.app/Contents/MacOS/: client
ChatApp/data/: authorisation.db
ChatApp/server/: ChatLogicServer.cpp  chat_logic_server.h  main.cpp  network_interface.h  qt_database_adapter.h  qt_network_adapter.h  server.pro
ChatApp/tests/: CMakeLists.txt
ChatApp/tests/test_client/: MockDatabase.h  main.cpp  main_.cpp  tst_test.cpp
ChatApp/tests/test_server/: main.cpp  tst_authentication.cpp
client/: auth_window.cpp  auth_window.h  auth_window.ui  chat_controller.cpp  chat_controller.h  client.pro  client.pro.user.7dd7785  client.pro.user.b1fa396  controller_manager.cpp  controller_manager.h  groupchatwindow.cpp  groupchatwindow.h  groupchatwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.h.old  mainwindow.ui  mainwindow_controller.cpp  mainwindow_controller.h  message_database.cpp  message_database.h  privatechat_controller.cpp  privatechat_controller.h  privatechat_model.cpp  privatechat_model.h  privatechatwindow.cpp  privatechatwindow.h  privatechatwindow.ui  reg_window.cpp  reg_window.h  reg_window.ui  singleton_helper.h  transitwindow.cpp
client/auth_window/: auth_window_interface.h  qt_auth_window.cpp  qt_auth_window.h
client/groupchat_window/: group_chat_interface.h  groupchatwindow.ui  qt_group_chat_window.cpp  qt_group_chat_window.h
client/mainwindow/: main_window_interface.h  mainwindow.cpp  mainwindow.h  qt_main_window.cpp  qt_main_window.h
client/privatechat_window/: private_chat_interface.h  privatechatwindow.ui  qt_private_chat_window.cpp  qt_private_chat_window.h
client/reg_window/: qt_reg_window.cpp  qt_reg_window.h  reg_window_interface.h
client/transit_window/: transitwindow.cpp  transitwindow.h
data/: authorisation.db
server/: ChatLogicServer.cpp  Makefile  Makefile.Debug  Makefile.Release  database_interface.h  qt_database_adapter.cpp  qt_database_adapter.h  qt_network_adapter.cpp  server.cpp  server.h  server.pro  server.pro.user.7dd7785  server.pro.user.b1fa396
server/.qtc_clangd/: compile_commands.json
server/.qtc_clangd/.cache/clangd/index/: main.cpp.668CC1A2EB5DD017.idx  main.cpp.986DF551A3BCC084.idx  main.cpp.E566EFDF3B33BC6F.idx  main.cpp.F95759A493DCFF07.idx  qcomparehelpers.h.AD392A24D6973CA6.idx  qdeadlinetimer.h.C955E53BC5261E9C.idx  qflags.h.A6AE39A9BEF654B6.idx  qiodevice.h.F09857596DF2EB5C.idx  qlist.h.9C392C4D9D5D92FB.idx  qmetatype.h.E15F23C7A62B3F50.idx  qobject.h.B4CB71F856B3CFBE.idx  qobjectdefs.h.598338BCF6E52C4D.idx  qobjectdefs_impl.h.40B661FAA1ACBBB6.idx  qshareddata.h.F47E2F0C2707F9A1.idx  qsqldatabase.h.6D447F81A6CC859E.idx  qtclasshelpermacros.h.CB2D37825C70D41E.idx  qtcpserver.h.327510D81234183F.idx  qtmetamacros.h.600699E2EBA2BCA5.idx  qtypeinfo.h.51CD9C62E04C8AD1.idx  qvariant.h.CC478F87892663E5.idx  server.cpp.22C49F7DB8DE2D15.idx  server.cpp.911DEEDE5CD15B2A.idx  server.cpp.CED97F25A2321095.idx  server.cpp.E1EB7791235A96F2.idx  server.h.12A44EF15804B462.idx  server.h.AABD6867413DDA55.idx  server.h.AC9869C1864F6D20.idx  server.h.F105ED1AFC7D8068.idx
server/data/: authorisation.db
server/release/: moc_server.cpp
tests/test_client/: CMakeLists.txt  main.cpp  tst_auth_ui.cpp
tests/test_server/: CMakeLists.txt  MockDatabase.h  MockNetworkClient.h  MockNetworkServer.h  main.cpp  tst_authentication.cpp  tst_registration.cpp  tst_test.cpp
